Edited hidden function in treatment and patient (NEED FIX)

--- a/Webapp/Webapp/Views/Doctor/Details.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Details.cshtml
@@ -75,5 +75,5 @@
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { id = Model.EmployeeNumber }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug naar lijst</a>
 </div>
