--- a/Webapp/Webapp/Views/Department/Index.cshtml
+++ b/Webapp/Webapp/Views/Department/Index.cshtml
@@ -10,10 +10,10 @@
 @if (User.IsInRole("admin"))
 {
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create">Nieuwe toevoegen</a>
     </p>
 }
-    <div class="hidden" id="asdfgh">
+    <div class="hidden" id="departmentContainer">
         <table class="table table-striped table-hover" id="departmentTable" style="width:100%;">
             <thead>
                 <tr>
@@ -48,7 +48,7 @@
 <script>
     $("document").ready(function () {
         initDataTable();
-        $("#asdfgh").removeClass("hidden");
+        $("#departmentContainer").removeClass("hidden");
     });
 
     function initDataTable() {
