--- a/Webapp/Webapp/Views/Patient/Index.cshtml
+++ b/Webapp/Webapp/Views/Patient/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>Patiëntenlijst</h2>
 
 
-<div class="hidden" id="asdfgh">
+<div id="patientContainer">
     <table class="table table-striped table-hover" id="patientTable" style="width:100%;">
         <thead>
             <tr>
@@ -34,13 +34,18 @@
         </tbody>
     </table>
 </div>
-    @section Scripts {
-        <script>
-            $("document").ready(function () {
-                var table = $('#patientTable').DataTable({
-                });
-                $("#asdfgh").removeClass("hidden");
-            });
+@section Scripts {
+<script>
+    $("document").ready(function () {
+        initDataTable();
+        $("#patientContainer").removeClass("hidden");
+    });
 
-        </script>
+    function initDataTable() {
+        $("#patientTable").DataTable({
+
+        });
     }
+
+</script>
+}
