--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -11,7 +11,7 @@
         <a asp-action="create">Create New</a>
     </p>
 }
-    <div class="hidden" id="asdfgh">
+    <div id="treatmentContainer">
         <table class="table table-striped table-hover" id="treatmentTable" style="width:100%;">
             <thead>
                 <tr>
@@ -46,7 +46,7 @@
             <script>
                 $("document").ready(function () {
                     initDataTable();
-                    $("#asdfgh").removeClass("hidden");
+                    $("#treatmentContainer").removeClass("hidden");
                 });
 
                 function initDataTable() {
