--- a/Webapp/Webapp/Views/Doctor/Create.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Create.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Webapp.Models.DoctorDetailViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Creëer";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Creëer</h2>
 
-<h4>DoctorDetailViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
