--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Webapp.Models.Data;
 @model Webapp.Models.UserViewModel
 @{
-    ViewData["Title"] = "Patiënt";
+    ViewData["Title"] = "Profiel";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
