--- a/Webapp/Webapp/Views/Treatment/Create.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Create.cshtml
@@ -86,5 +86,5 @@
     </div><!--/col-9-->
 </div><!--/row-->
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug naar lijst</a>
 </div>
