--- a/Webapp/Webapp/Views/TreatmentType/Create.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Create.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Webapp.Models.TreatmentTypeDetailViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Creëer";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Creëer</h2>
 
-<h4>TreatmentTypeDetailViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -39,6 +38,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug naar lijst</a>
 </div>
 
