--- a/Webapp/Webapp/Views/Department/Details.cshtml
+++ b/Webapp/Webapp/Views/Department/Details.cshtml
@@ -1,14 +1,13 @@
 ﻿@model Webapp.Models.DepartmentDetailViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Afdelinggegevens";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Afdelinggegevens</h2>
 
 <div>
-    <h4>DepartmentDetailViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -42,7 +41,7 @@
 <div>
     @if (User.IsInRole("admin"))
     {
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }); @: | 
+    @Html.ActionLink("Aanpassen", "Edit", new { id = Model.Id }); @: | 
     }
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug naar lijst</a>
 </div>
