--- a/Webapp/Webapp/Views/TreatmentType/Edit.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Edit.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Webapp.Models.TreatmentTypeDetailViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Aanpassen";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Aanpassen</h2>
 
-<h4>TreatmentTypeDetailViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -47,6 +46,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug naar lijst</a>
 </div>
 
