--- a/Webapp/Webapp/Views/TreatmentType/Index.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Webapp.Models.TreatmentTypeViewModel
 
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Type behandelingenlijst";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>TreatmentTypes</h2>
+<h2>Type behandelingenlijst</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Nieuwe toevoegen</a>
 </p>
 <table class="table table-striped table-hover" id="treatmentTypeTable" style="width:100%;">
     <thead>
@@ -39,9 +39,9 @@
                     @Html.DisplayFor(modelItem => item.Active)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Inzage", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Aanpassen", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Verwijderen", "Delete", new { id = item.Id })
                 </td>
             </tr>
         }
