--- a/Webapp/Webapp/Views/Profile/Inzie.cshtml
+++ b/Webapp/Webapp/Views/Profile/Inzie.cshtml
@@ -1,8 +1,6 @@
-﻿@using Webapp.Models.Data;
-@model Webapp.Models.UserViewModel
+﻿@model Webapp.Models.UserViewModel
 @{
     ViewData["Title"] = "Patiënt";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @if (Model.Patient != null)
