--- a/Webapp/Webapp/Views/Department/Index.cshtml
+++ b/Webapp/Webapp/Views/Department/Index.cshtml
@@ -9,9 +9,12 @@
 
 @if (User.IsInRole("admin"))
 {
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
+    @if (User.IsInRole("admin"))
+    {
+        <p>
+            <a asp-action="Create">Create New</a>
+        </p>
+    }
 }
 <table class="table table-striped table-hover" id="departmentTable" style="width:100%;">
     <thead>
@@ -22,35 +25,36 @@
         </tr>
     </thead>
     <tbody>
-@foreach (DepartmentDetailViewModel vm in Model.Departments) {
-        <tr>
-            <td>@Html.DisplayFor(modelItem => vm.Name)</td>
-            <td>@Html.DisplayFor(modelItem => vm.Description)</td>
-            <td>
-                @if (User.IsInRole("admin"))
-                {
-                    @Html.ActionLink("Edit", "Edit", new { id = vm.Id }); @: | 
-                }
-                @Html.ActionLink("Details", "Details", new { id = vm.Id })
-                @if (User.IsInRole("admin"))
-                {
-                    @: | @Html.ActionLink("Delete", "Delete", new { id = vm.Id }) 
-                }
-            </td>
-        </tr>
-}
+        @foreach (DepartmentDetailViewModel vm in Model.Departments)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => vm.Name)</td>
+                <td>@Html.DisplayFor(modelItem => vm.Description)</td>
+                <td>
+                    @if (User.IsInRole("admin"))
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = vm.Id }); @: |
+                    }
+                    @Html.ActionLink("Details", "Details", new { id = vm.Id })
+                    @if (User.IsInRole("admin"))
+                    {
+                        @: | @Html.ActionLink("Delete", "Delete", new { id = vm.Id })
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 @section Scripts {
-<script>
-    $("document").ready(function () {
-        initDataTable();
-    });
-
-    function initDataTable() {
-        $("#departmentTable").DataTable({
-
+    <script>
+        $("document").ready(function () {
+            initDataTable();
         });
-    }
-</script>
+
+        function initDataTable() {
+            $("#departmentTable").DataTable({
+
+            });
+        }
+    </script>
 }
