--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewData["Title"] - Webapp</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" asp-append-version="true"/>
         <link rel="stylesheet" href="~/css/custom.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/css/slider.css" />
