--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Nieuwe toevoegen</a>
 </p>
-<div class="hidden" id="asdfgh">
+<div class="hidden" id="doctorTable">
     <table class="table table-striped table-hover" id="doctorTable" style="width:100%;">
         <thead>
             <tr>
@@ -40,12 +40,12 @@
         </tbody>
     </table>
 </div>
-@section Scripts {
-    <script>
-        $("document").ready(function () {
-            initDataTable();
-            $("#asdfgh").removeClass("hidden");
-        });
+    @section Scripts {
+        <script>
+            $("document").ready(function () {
+                initDataTable();
+                $("#doctorTable").removeClass("hidden");
+            });
 
         function initDataTable() {
             $("#doctorTable").DataTable({
