--- a/Webapp/Webapp/Views/Profile/Edit.cshtml
+++ b/Webapp/Webapp/Views/Profile/Edit.cshtml
@@ -9,7 +9,7 @@
 
 @if (Model.Patient != null)
 {
-    <link rel="stylesheet" href="~/css/User.css" />
+    <link rel="stylesheet" href="~/css/Slider.css" />
     <div class="container bootstrap snippet">
         <form class="form" method="post" id="registrationForm">
             <div class="row">
