--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Nieuwe toevoegen</a>
 </p>
-<div class="hidden" id="doctorTable">
+<div class="hidden" id="doctorTableParent">
     <table class="table table-striped table-hover" id="doctorTable" style="width:100%;">
         <thead>
             <tr>
@@ -25,7 +25,7 @@
                     <td>@Html.DisplayFor(modelItem => item.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.Genders[item.GenderId])</td>
                     <td>
-                        @Html.ActionLink("Inzage", "Details", new { id = item.EmployeeNumber }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.EmployeeNumber }) |
                         @if (User.IsInRole("admin"))
                         {
                         @Html.ActionLink("Aanpassen", "Edit", new { id = item.EmployeeNumber }) @: | 
@@ -41,7 +41,7 @@
         <script>
             $("document").ready(function () {
                 initDataTable();
-                $("#doctorTable").removeClass("hidden");
+                $("#doctorTableParent").removeClass("hidden");
             });
 
             function initDataTable() {
