--- a/Webapp/Webapp/Views/Doctor/Details.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Details.cshtml
@@ -58,6 +58,8 @@
         <dd>
             @Html.DisplayFor(model => model.Age)
         </dd>
+        @if (User.IsInRole("admin"))
+        {
         <dt>
             @Html.DisplayNameFor(model => model.PrivMail)
         </dt>
@@ -70,9 +72,13 @@
         <dd>
             @Html.DisplayFor(model => model.PrivPhonenumber)
         </dd>
+        }
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Aanpassen", "Edit", new { id = Model.EmployeeNumber }) |
+    @if (User.IsInRole("admin"))
+     {
+    @Html.ActionLink("Aanpassen", "Edit", new { id = Model.EmployeeNumber }) @: | 
+     }
     <a asp-action="Index">Terug naar lijst</a>
 </div>
