--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -6,9 +6,12 @@
 
 <h2>Artsenlijst</h2>
 
+@if (User.IsInRole("admin"))
+{
 <p>
     <a asp-action="Create">Nieuwe toevoegen</a>
 </p>
+}
 <div class="hidden" id="doctorTable">
     <table class="table table-striped table-hover" id="doctorTable" style="width:100%;">
         <thead>
