--- a/Webapp/Webapp/Views/Profile/PatientDetails.cshtml
+++ b/Webapp/Webapp/Views/Profile/PatientDetails.cshtml
@@ -111,7 +111,7 @@
                         }
                         <div class="col-xs-12">
                             <br>
-                            <a asp-controller="treatment" asp-action="index" class="btn btn-primary"><i class="fa fa-chevron-left"></i> Terug</a>
+                            <a asp-controller="patient" asp-action="index" class="btn btn-primary"><i class="fa fa-chevron-left"></i> Terug</a>
                         </div>
                     </form>
                     <hr>
