--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -6,9 +6,12 @@
 
 <h2>Artsenlijst</h2>
 
+@if (User.IsInRole("admin"))
+{
 <p>
     <a asp-action="Create">Nieuwe toevoegen</a>
 </p>
+}
 <div class="hidden" id="doctorTable">
     <table class="table table-striped table-hover" id="doctorTable" style="width:100%;">
         <thead>
@@ -25,10 +28,10 @@
                     <td>@Html.DisplayFor(modelItem => item.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.Genders[item.GenderId])</td>
                     <td>
-                        @Html.ActionLink("Inzage", "Details", new { id = item.EmployeeNumber }) |
+                        @Html.ActionLink("Inzage", "Details", new { id = item.EmployeeNumber })
                         @if (User.IsInRole("admin"))
                         {
-                        @Html.ActionLink("Aanpassen", "Edit", new { id = item.EmployeeNumber }) @: | 
+                        @: | @Html.ActionLink("Aanpassen", "Edit", new { id = item.EmployeeNumber }) | 
                         @Html.ActionLink("Verwijderen", "Delete", new { id = item.EmployeeNumber })
                         }
                     </td>
