--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -88,10 +88,11 @@
                                         </i> Patiënten
                                     </a>
                                 </li>
-                                    <li><a asp-controller="Doctor" asp-action="Index">
-                                    <i class="fa fa-user-md fa-lg">
+                                <li>
+                                    <a asp-controller="Doctor" asp-action="Index">
+                                        <i class="fa fa-user-md fa-lg">
                                         </i> Artsen
-                                     </a>
+                                    </a>
                                 </li>
                                 <li>
                                     <a asp-action="index" asp-controller="department">
