--- a/Webapp/Webapp/Views/Treatment/Edit.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Edit.cshtml
@@ -86,3 +86,6 @@
             </div><!--/tab-content-->
         </div><!--/col-9-->
     </div><!--/row-->
+    <div>
+        <a asp-action="Index">Terug naar lijst</a>
+    </div>
