--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -11,7 +11,7 @@
         <a asp-action="create">Nieuwe toevoegen</a>
     </p>
 }
-    <div id="treatmentContainer">
+    <div class="hidden" id="treatmentContainer">
         <table class="table table-striped table-hover" id="treatmentTable" style="width:100%;">
             <thead>
                 <tr>
