--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -12,6 +12,7 @@
     <a asp-action="Create">Nieuwe toevoegen</a>
 </p>
 }
+<div class="hidden" id="doctorContainer">
     <table class="table table-striped table-hover" id="doctorTable" style="width:100%;">
         <thead>
             <tr>
@@ -41,11 +42,12 @@
             }
         </tbody>
     </table>
+</div>
     @section Scripts {
         <script>
             $("document").ready(function () {
                 initDataTable();
-                $("#doctorTable").removeClass("hidden");
+                $("#doctorContainer").removeClass("hidden");
             });
 
         function initDataTable() {
