--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -11,7 +11,7 @@
         <a asp-action="create">Nieuwe toevoegen</a>
     </p>
 }
-    <div class="hidden" id="treatmentContainer">
+    <div id="treatmentContainer">
         <table class="table table-striped table-hover" id="treatmentTable" style="width:100%;">
             <thead>
                 <tr>
@@ -42,6 +42,7 @@
             </tbody>
         </table>
     </div>
+
         @section Scripts {
             <script>
                 $("document").ready(function () {
