small clarity change

--- a/Webapp/Webapp/Views/Patient/Treatment.cshtml
+++ b/Webapp/Webapp/Views/Patient/Treatment.cshtml
@@ -117,7 +117,7 @@
                             <div class="form-group">
                                 <div class="col-xs-12">
                                     <label for="Comments"><h4>Nieuw Commentaar</h4></label>
-                                    <input type="text" class="form-control" asp-for="TreatmentDetailViewModels[0].Description.Title" placeholder="Nieuw Commentaar" title="Commentaar op behandeling.">
+                                    <input type="text" class="form-control" asp-for="TreatmentDetailViewModels[0].Description.Title" placeholder="Nieuw Titel" title="Titel van commentaar.">
                                     <br />
                                     <input type="text" class="form-control" asp-for="TreatmentDetailViewModels[0].Description.Description" placeholder="Nieuw Commentaar" title="Commentaar op behandeling.">
                                     <br />
