Dutch and Inzage => Details

--- a/Webapp/Webapp/Views/Department/Index.cshtml
+++ b/Webapp/Webapp/Views/Department/Index.cshtml
@@ -30,14 +30,11 @@
                     <td>@Html.DisplayFor(modelItem => vm.Name)</td>
                     <td>@Html.DisplayFor(modelItem => vm.Description)</td>
                     <td>
-                        @if (User.IsInRole("admin"))
-                        {
-                            @Html.ActionLink("Edit", "Edit", new { id = vm.Id }); @: |
-                        }
                         @Html.ActionLink("Details", "Details", new { id = vm.Id })
                         @if (User.IsInRole("admin"))
                         {
-                            @: | @Html.ActionLink("Delete", "Delete", new { id = vm.Id })
+                            @: | @Html.ActionLink("Aanpassen", "Edit", new { id = vm.Id }) |
+                            @Html.ActionLink("Verwijderen", "Delete", new { id = vm.Id })
                         }
                     </td>
                 </tr>
