--- a/Webapp/Webapp/Views/TreatmentType/Index.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Index.cshtml
@@ -40,7 +40,7 @@
                     @Html.DisplayFor(modelItem => item.Active)
                 </td>
                 <td>
-                    @Html.ActionLink("Inzage", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Aanpassen", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Verwijderen", "Delete", new { id = item.Id })
                 </td>
