--- a/Webapp/Webapp/Views/Patient/Index.cshtml
+++ b/Webapp/Webapp/Views/Patient/Index.cshtml
@@ -16,6 +16,7 @@
                 <th>Naam</th>
                 <th>Geslacht</th>
                 <th>Geboortedatum</th>
+                <th>Acties</th>
             </tr>
         </thead>
         <tbody>
