--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -22,6 +22,7 @@
                     <th>Naam</th>
                     <th>StartDatum</th>
                     <th>EindDatum</th>
+                    <th>Acties</th>
                     </tr>
             </thead>
             <tbody>
