--- a/Webapp/Webapp/Views/TreatmentType/Index.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Index.cshtml
@@ -23,7 +23,7 @@
             <th>
                 Actief
             </th>
-            <th>Actions</th>
+            <th>Acties</th>
         </tr>
     </thead>
     <tbody>
